refactor(mainnav-item): styles

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
     <span slot="brand">Design System</span>
     <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand">
 
-    <sgds-mainnav-item active href="#">Home</sgds-mainnav-item>
-    <sgds-mainnav-item href="#">About</sgds-mainnav-item>
+    <sgds-mainnav-item active  href="#">Home</sgds-mainnav-item>
+    <sgds-mainnav-item disabled href="#">About</sgds-mainnav-item>
     <sgds-mainnav-item href="#" slot="end" class="test test2">Info</sgds-mainnav-item>
     <sgds-mainnav-item href="#" slot="end">Contact Us</sgds-mainnav-item>
     <sgds-mainnav-dropdown togglerText="Dropdown">
