--- a/index.html
+++ b/index.html
@@ -154,11 +154,14 @@
     <span slot="brand">Design System</span>
     <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand">
 
-    <sgds-mainnav-item active  href="#">Home</sgds-mainnav-item>
+    <sgds-mainnav-item active href="#">
+        <strong>Home</strong>
+    </sgds-mainnav-item>
     <sgds-mainnav-item disabled href="#">About</sgds-mainnav-item>
     <sgds-mainnav-item href="#" slot="end" class="test test2">Info</sgds-mainnav-item>
     <sgds-mainnav-item href="#" slot="end">Contact Us</sgds-mainnav-item>
-    <sgds-mainnav-dropdown togglerText="Dropdown">
+    <sgds-mainnav-dropdown disabled>
+        <strong slot="toggler">Dropdown</strong>
         <sgds-dropdown-item href="#">Item 1</sgds-dropdown-item>
         <sgds-dropdown-item href="#">Item 2</sgds-dropdown-item>
         <sgds-dropdown-item href="#">Item 3</sgds-dropdown-item>
@@ -726,7 +729,7 @@
                             This is a toast notifications
                         </sgds-toast>
                         <sgds-toast show bg="warning" status="success"></sgds-toast><br>
-                        <sgds-toast-container position="top-start">
+                        <sgds-toast-container>
                             <sgds-toast show>
                                 <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                     fill="currentColor" class="bi bi-airplane" viewBox="0 0 16 16">
