test(next): add e2e cypress test for nextjs

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             color: red;
         } */
 
-        .grid {
+        .grid-preview {
             display: grid;
             grid-template-areas:
                 "masthead masthead masthead "
@@ -178,7 +178,7 @@
     <dev-console-widget slot="non-collapsible" iconColor="black" iconWidth="28px" iconHeight="28px">
     </dev-console-widget>
 </sgds-mainnav>
-<div class="grid">
+<div class="grid-preview">
     <sgds-sidenav class="mt-3" id="test-id" sticky>
         <sgds-sidenav-item active>
             <span slot="title">
