refactor(accordion): update styles wip

--- a/index.html
+++ b/index.html
@@ -429,14 +429,14 @@
             <h2>Accordion</h2>
             <div class="row">
 
-                <sgds-accordion accordionclasses="mb-4">
+                <sgds-accordion accordionclasses="accordion-flush">
                     <sgds-accordion-item>
                         <div slot="accordion-header">This is a solo accordion</div>
                         <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
                             soluta eaque fugit fuga distinctio? Eum.</span>
                     </sgds-accordion-item>
                 </sgds-accordion>
-                <sgds-accordion>
+                <sgds-accordion accordionclasses="accordion-flush">
                     <sgds-accordion-item>
                         <div slot="accordion-header">This is an accordion</div>
                         <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
@@ -458,7 +458,7 @@
                             soluta eaque fugit fuga distinctio? Eum.</span>
                     </sgds-accordion-item>
                     <sgds-accordion-item>
-                        <p class="m-0" slot="accordion-header">Accordion 3</p>
+                        <div class="m-0" slot="accordion-header">Accordion 3</div>
                         <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
                             soluta eaque fugit fuga distinctio? Eum.</span>
                     </sgds-accordion-item>
