refactor(accordion): styles wip

--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
         sgds-mainnav-dropdown {
             /* --mainnav-item-theme-color: red; */
         }
+
+        sgds-accordion-item {
+            --accordion-color: red;
+            --accordion-btn-color: red;
+        }
     </style>
     <!-- <script src="https://cdn.jsdelivr.net/npm/clk-web-components" type="module"></script> -->
     <script type="module">
