refactor(card): use ::before selector to avoid clash with target blank using after selector

--- a/index.html
+++ b/index.html
@@ -218,6 +218,11 @@
                 <a slot="card-link" href="/story/getting-started-installation--page" target="_blank">Learn more</a>
                 <p slot="card-text">Besides whole library CDN, each component also has its own CDN.</p>
             </sgds-card>
+            <sgds-card class="col">
+                <span slot="card-title">Works with CDNs <i class="bi bi-truck"></i></span>
+                <a slot="card-link" href="/story/getting-started-installation--page">Learn more</a>
+                <p slot="card-text">Besides whole library CDN, each component also has its own CDN.</p>
+            </sgds-card>
             <sgds-button href="/" target="_blank">Go there hello there</sgds-button>
             <h2>Progress</h2>
             <div class="row">
