--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <span slot="card-title">SGDS v2+ <i class="bi bi-filetype-scss"></i></span>
                 <p slot="card-text">The components are shipped with SGDS v2 styles and can be used straight out of the
                     box.</p>
-                <a slot="card-link" href="https://designsystem.tech.gov.sg/"></a>
+                <a slot="card-link" target="_blank" href="https://designsystem.tech.gov.sg/"></a>
 
             </sgds-card>
             <datepicker-input></datepicker-input>
