--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="module" id="console-components-gateway"
         src="https://dev.assets.developer.tech.gov.sg/console-components/gateway.es5.js" nonce={nonce ||
         undefined}></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> -->
     <style>
         /* * {
             font-family: "bootstrap-icons", system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -485,42 +485,42 @@
                 <h2>Badge</h2>
                 <div class="row">
                     <div class="d-flex">
-                        <sgds-badge variant="primary" isLight>
+                        <sgds-badge variant="primary" outlined>
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             <i slot="leftIcon" class="bi bi-123"></i>
                         </sgds-badge>
-                        <sgds-badge variant="secondary" isLight>
+                        <sgds-badge variant="secondary" outlined>
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             <i slot="leftIcon" class="bi bi-123"></i>
                         </sgds-badge>
-                        <sgds-badge variant="warning" isLight>
+                        <sgds-badge variant="warning" outlined>
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             <i slot="leftIcon" class="bi bi-123"></i>
                         </sgds-badge>
-                        <sgds-badge variant="success" isLight>
+                        <sgds-badge variant="success" outlined>
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             <i slot="leftIcon" class="bi bi-123"></i>
                         </sgds-badge>
-                        <sgds-badge variant="danger" isLight roundedPill>
+                        <sgds-badge variant="danger" outlined roundedPill>
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             <i slot="leftIcon" class="bi bi-123"></i>
                         </sgds-badge>
-                        <sgds-badge variant="info" isLight>
+                        <sgds-badge variant="info" outlined>
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             <i slot="leftIcon" class="bi bi-123"></i>
                         </sgds-badge>
-                        <sgds-badge variant="light" isLight>
+                        <sgds-badge variant="light" outlined>
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             <i slot="leftIcon" class="bi bi-123"></i>
                         </sgds-badge>
-                        <sgds-badge variant="dark" isLight>
+                        <sgds-badge variant="dark" outlined>
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             <i slot="leftIcon" class="bi bi-123"></i>
