--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
                     <div class="container col is-6">
 
                         <h3>Links</h3>
-                        <sgds-alert alertclasses="" variant="primary" show=""><svg slot="icon"
+                        <sgds-alert variant="primary" show=""><svg slot="icon"
                                 xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-exclamation-circle" viewBox="0 0 16 16">
                                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
