feat(accordion): allow accordion active color customisation through new cssprop

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         sgds-sidenav {
             --sidenav-sticky-top: 1.5rem;
         }
-
+        sgds-accordion {
+            --accordion-active-color: blue;
+        }
         /* sgds-sidenav-item::part(sidenav-btn) {
             color: red;
             border-left-color: red;
