feat(alert): new css props introduced and renamed isLight prop to outlined

--- a/index.html
+++ b/index.html
@@ -768,7 +768,8 @@
                     <div class="container col is-6">
 
                         <h3>Links</h3>
-                        <sgds-alert variant="primary" show=""><svg slot="icon"
+                        <sgds-alert variant="primary" show="" dismissible>
+                            <svg slot="icon"
                                 xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-exclamation-circle" viewBox="0 0 16 16">
                                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
@@ -776,7 +777,205 @@
                                     d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
                                 </path>
                             </svg>
-                            This is an Alert component. You may add the dismissible option</sgds-alert>
+                            <span>
+                                This is a primary alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
+                        <sgds-alert variant="secondary" show="" dismissible>
+                            <svg slot="icon"
+                            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path
+                                    d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
+                                </path>
+                            </svg>
+                            <span>
+                                This is a secondary alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
+                        <sgds-alert variant="warning" show="" dismissible>
+                            <svg slot="icon"
+                            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path
+                                    d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
+                                </path>
+                            </svg>
+                            <span>
+                                This is a warning alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
+                        <sgds-alert variant="danger" show="" dismissible>
+                            <svg slot="icon"
+                            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path
+                                    d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
+                                </path>
+                            </svg>
+                            <span>
+                                This is a danger alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
+                        <sgds-alert variant="success" show="" dismissible>
+                            <svg slot="icon"
+                            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path
+                                    d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
+                                </path>
+                            </svg>
+                            <span>
+                                This is a success alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
+                        <sgds-alert variant="info" show="" dismissible>
+                            <svg slot="icon"
+                            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path
+                                    d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
+                                </path>
+                            </svg>
+                            <span>
+                                This is a info alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
+                        <sgds-alert variant="light" show="" dismissible>
+                            <svg slot="icon"
+                            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path
+                                    d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
+                                </path>
+                            </svg>
+                            <span>
+                                This is a light alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
+                        <sgds-alert variant="dark" show="" dismissible>
+                            <svg slot="icon"
+                            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path
+                                    d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
+                                </path>
+                            </svg>
+                            <span>
+                                This is a dark alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
+                        <sgds-alert variant="primary" show="" outlined dismissible>
+                            <svg slot="icon"
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path
+                                    d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
+                                </path>
+                            </svg>
+                            <span>
+                                This is an outline primary alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
+                        <sgds-alert variant="secondary" show="" outlined dismissible>
+                            <svg slot="icon"
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path
+                                    d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
+                                </path>
+                            </svg>
+                            <span>
+                                This is an outline secondary alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
+                        <sgds-alert variant="warning" show="" outlined dismissible>
+                            <svg slot="icon"
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path
+                                    d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
+                                </path>
+                            </svg>
+                            <span>
+                                This is an outline warning alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
+                        <sgds-alert variant="danger" show="" outlined dismissible>
+                            <svg slot="icon"
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path
+                                    d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
+                                </path>
+                            </svg>
+                            <span>
+                                This is an outline danger alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
+                        <sgds-alert variant="success" show="" outlined dismissible>
+                            <svg slot="icon"
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path
+                                    d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
+                                </path>
+                            </svg>
+                            <span>
+                                This is an outline success alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
+                        <sgds-alert variant="info" show="" outlined dismissible>
+                            <svg slot="icon"
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path
+                                    d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
+                                </path>
+                            </svg>
+                            <span>
+                                This is an outline info alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
+                        <sgds-alert variant="light" show="" outlined dismissible>
+                            <svg slot="icon"
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path
+                                    d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
+                                </path>
+                            </svg>
+                            <span>
+                                This is an outline light alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
+                        <sgds-alert variant="dark" show="" outlined dismissible>
+                            <svg slot="icon"
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path
+                                    d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z">
+                                </path>
+                            </svg>
+                            <span>
+                                This is an outline dark alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like. You may add the dismissible option
+                            </span>
+                        </sgds-alert>
                         <sgds-alert variant="success" show="">
                             <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                 fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
