--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="module" id="console-components-gateway"
         src="https://dev.assets.developer.tech.gov.sg/console-components/gateway.es5.js" nonce={nonce ||
         undefined}></script>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         /* * {
             font-family: "bootstrap-icons", system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -99,7 +99,7 @@
 
         sgds-mainnav {
             grid-area: nav;
-            /* --mainnav-theme-color: red; */
+            --sgds-mainnav-theme-color: red;
         }
 
         main {
@@ -111,9 +111,9 @@
             grid-area: footer;
         }
 
-        sgds-mainnav-item,
-        sgds-mainnav-dropdown {
-            --mainnav-item-theme-color: red;
+        sgds-mainnav-item
+        {
+           --sgds-mainnav-item-theme-color: blue;
         }
     
     </style>
@@ -313,7 +313,7 @@
                         <sgds-button variant="info">Hello World</sgds-button>
                         <sgds-button variant="danger">Hello World</sgds-button>
                         <sgds-button variant="light">Hello World</sgds-button>
-                        <sgds-button variant="link">Hello World</sgds-button>
+                        <sgds-button variant="link" target="_blank" href="#">Hello World</sgds-button>
                         <sgds-button variant="dark">Hello World</sgds-button>
                         <sgds-button disabled variant="primary">Hello World</sgds-button>
                         <sgds-button disabled variant="secondary">Hello World</sgds-button>
@@ -503,7 +503,7 @@
                 </sgds-accordion>
                 <h2>Badge</h2>
                 <div class="row">
-                    <div class="d-flex">
+                    <div>
                         <sgds-badge variant="primary" outlined>
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
