--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
         sgds-footer {
             grid-area: footer;
         }
+        sgds-dropdown {
+            --sgds-btn-font-size: 10rem;
+        }
 
         sgds-mainnav-item
         {
@@ -385,7 +388,6 @@
             <h2>Datepicker</h2>
             <form id="datepicker-form" novalidate>
                 <sgds-input hasFeedback required></sgds-input>
-            </sgds-input>
                 <sgds-input type="text" label="Label" hinttext="This is a hint text" name="email" inputclasses=""
                     invalidfeedback="" icon="<svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; fill=&quot;currentColor&quot; class=&quot;bi bi-envelope&quot; viewBox=&quot;0 0 16 16&quot;>
                     <path d=&quot;M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z&quot;/>
@@ -658,6 +660,8 @@
                     <div class="grid">
                         <sgds-button variant="primary">
                             Primary
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
                         </sgds-button>
                         <sgds-button variant="outline-secondary">Outline</sgds-button>
                         <sgds-button variant="success" disabled>Disabled</sgds-button>
