chore(*): cleanup of previous components to fit naming conventions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
         /* * {
             font-family: "bootstrap-icons", system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         } */
-
+        .card-title-no-image{
+            display: flex;
+            flex-direction: row;
+            >sgds-badge {
+                margin-left: auto;
+            }
+        }
 
 
         body {
@@ -724,10 +730,24 @@
             </div>
             <div class="container">
                 <h2>Card</h2>
-                <sgds-card bordercolor="primary" textcolor="" stretchedLink>
+                <sgds-card bordercolor="primary" textcolor="">
                     <img slot="card-image" alt="img alternate text goes here"
                         src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
-                    <span slot="card-title">Card</span>
+                    <h3 slot="card-title">Card</h3>
+                    <span slot="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the card's content.</span>
+
+                    <a slot="card-link" href="https://google.com">Go somewhere</a>
+
+                    <!-- <a  href="https://google.com">Go somewhere</a>
+                    <a  href="https://google.com">Go somewhere</a> -->
+                </sgds-card>
+                <sgds-card bordercolor="primary" textcolor="" >
+                    <div slot="card-title" class="card-title-no-image">
+                        <i slot="rightIcon" class="bi bi-apple"></i>
+                       Card
+                    <sgds-badge>test</sgds-badge>
+                    </div>
                     <span slot="card-text">Some quick example text to build on the card title and make up the bulk of
                         the card's content.</span>
 
