chore(*): remove unused prop for progress

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                     </sgds-modal>
                 </div>
 
-                <sgds-progress progressClasses="mb-3" height="40">
+                <sgds-progress height="40">
                     <sgds-progress-bar value="50"></sgds-progress-bar>
                 </sgds-progress>
 
