--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
 
     <main>
         <div class="container">
-
-            <sgds-textarea label="Label" name="textarea" textareaclasses="" rows="4" invalidfeedback=""
-                placeholder="Placeholder" minlength="" maxlength="100" resize="auto" defaultvalue="">
+            <textarea></textarea>
+            <sgds-textarea required label="Label" name="textarea" textareaclasses="" rows="4" invalidfeedback="test"
+                placeholder="Placeholder" minlength="" hasFeedback maxlength="1000" resize="auto" defaultvalue="">
             </sgds-textarea>
         </div>
         <div class="container">
