chore(*): display all colors of spinner

--- a/index.html
+++ b/index.html
@@ -421,6 +421,10 @@
             <sgds-spinner color="secondary"></sgds-spinner>
             <sgds-spinner color="warning"></sgds-spinner>
             <sgds-spinner color="danger"></sgds-spinner>
+            <sgds-spinner color="success"></sgds-spinner>
+            <sgds-spinner color="info"></sgds-spinner>
+            <sgds-spinner color="light"></sgds-spinner>
+            <sgds-spinner color="dark"></sgds-spinner>
         </div>
         <div class="container">
             <h2>Dropdown</h2>
