chore(*): display toast container

--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
                             <span slot="duration">2 mins ago</span>
                             This is a toast notifications
                         </sgds-toast>
-                        <!-- <sgds-toast-container position="bottom-start">
+                        <sgds-toast-container position="bottom-start">
                             <sgds-toast show>
                                 <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                     fill="currentColor" class="bi bi-airplane" viewBox="0 0 16 16">
@@ -891,7 +891,7 @@
                             <sgds-toast show title="hello">This is a toast <span slot="duration">just
                                     now</span></sgds-toast>
                             <sgds-toast show title="hello">This is a toast</sgds-toast>
-                        </sgds-toast-container> -->
+                        </sgds-toast-container>
                     </div>
                 </div>
             </div>
