feat(drawer): new css props introduced and old ones renamed
BREAKING CHANGE: --sgds prefix added to existing css props and certain namings are replaced to
follow convention strictly

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
         sgds-dropdown {
             --sgds-btn-font-size: 10rem;
         }
+        sgds-drawer {
+            --sgds-close-btn-color: red;
+        }
 
         sgds-mainnav-item
         {
