--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
             <div>
                 <h2>Checkbox</h2>
                 <form id="radio-submit">
-                <sgds-checkbox id="hehe" disabled invalid hasFeedback checked invalidFeedback="test">1</sgds-checkbox>
+                <sgds-checkbox id="hehe" invalid hasFeedback checked invalidFeedback="test">1</sgds-checkbox>
                 <sgds-checkbox hasFeedback>2</sgds-checkbox>
                 <sgds-checkbox>3</sgds-checkbox>
                 <sgds-button  type="submit" >Submit</sgds-button>
@@ -742,7 +742,7 @@
                 <form id="radio-submit">
                     <sgds-radio-group required hasFeedback invalidFeedback="This is required" >
                         <span slot="label">Select an option</span>
-                        <sgds-radio isInline value="1" >Option 1</sgds-radio>
+                        <sgds-radio disabled isInline value="1" >Option 1</sgds-radio>
                         <sgds-radio isInline value="2"  >Option 2</sgds-radio>
                         <sgds-radio isInline value="3" >Option 3</sgds-radio>
                     </sgds-radio-group>
