--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
             width: 100%;
         }
 
-        sgds-tab-group::part(body) {
+        /* sgds-tab-group::part(body) {
             border: 1px solid blue;
             border-radius: 2px;
             margin-top: 100px;
-        }
+        } */
 
         sgds-sidenav-item {
             --sidenav-theme-color: green;
@@ -271,20 +271,22 @@
         </div>
         <div class="container">
             <sgds-tab-group variant="tabs-info-toggle">
-                <sgds-tab disabled slot="nav" panel="one"><svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16"
+                <sgds-tab disabled slot="nav" panel="apple"><svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16"
                         height="16" fill="currentColor" class="bi bi-bank" viewBox="0 0 16 16">
                         <path
                             d="m8 0 6.61 3h.89a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v7a.5.5 0 0 1 .485.38l.5 2a.498.498 0 0 1-.485.62H.5a.498.498 0 0 1-.485-.62l.5-2A.501.501 0 0 1 1 13V6H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 3h.89L8 0ZM3.777 3h8.447L8 1 3.777 3ZM2 6v7h1V6H2Zm2 0v7h2.5V6H4Zm3.5 0v7h1V6h-1Zm2 0v7H12V6H9.5ZM13 6v7h1V6h-1Zm2-1V4H1v1h14Zm-.39 9H1.39l-.25 1h13.72l-.25-1Z" />
                     </svg><span slot="count">1</span><span slot="label">Apple</span>
                 </sgds-tab>
-                <sgds-tab active slot="nav"><span slot="count">12</span><span slot="label">Banana</span></sgds-tab>
-                <sgds-tab slot="nav"><sgds-badge slot="count" variant="light"
+                <sgds-tab active slot="nav" panel="banana"><span slot="count">12</span><span slot="label">Banana</span></sgds-tab>
+                <sgds-tab slot="nav" panel="carrot"><sgds-badge slot="count" variant="light"
                         badgeClasses="text-dark">100</sgds-badge><span slot="label">Carrot</span></sgds-tab>
 
-                <sgds-tab-panel name="one">hello</sgds-tab-panel>
+                <sgds-tab-panel name="apple">Apple</sgds-tab-panel>
+                <sgds-tab-panel name="banana">Banana</sgds-tab-panel>
+                <sgds-tab-panel name="carrot">Carrot</sgds-tab-panel>
             </sgds-tab-group>
             <sgds-tab-group variant="tabs-basic-toggle">
-                <sgds-tab disabled slot="nav" panel="one"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                <sgds-tab disabled slot="nav" panel="12"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                         fill="currentColor" class="bi bi-bank" viewBox="0 0 16 16">
                         <path
                             d="m8 0 6.61 3h.89a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v7a.5.5 0 0 1 .485.38l.5 2a.498.498 0 0 1-.485.62H.5a.498.498 0 0 1-.485-.62l.5-2A.501.501 0 0 1 1 13V6H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 3h.89L8 0ZM3.777 3h8.447L8 1 3.777 3ZM2 6v7h1V6H2Zm2 0v7h2.5V6H4Zm3.5 0v7h1V6h-1Zm2 0v7H12V6H9.5ZM13 6v7h1V6h-1Zm2-1V4H1v1h14Zm-.39 9H1.39l-.25 1h13.72l-.25-1Z" />
@@ -293,14 +295,16 @@
                         <path
                             d="m8 0 6.61 3h.89a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v7a.5.5 0 0 1 .485.38l.5 2a.498.498 0 0 1-.485.62H.5a.498.498 0 0 1-.485-.62l.5-2A.501.501 0 0 1 1 13V6H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 3h.89L8 0ZM3.777 3h8.447L8 1 3.777 3ZM2 6v7h1V6H2Zm2 0v7h2.5V6H4Zm3.5 0v7h1V6h-1Zm2 0v7H12V6H9.5ZM13 6v7h1V6h-1Zm2-1V4H1v1h14Zm-.39 9H1.39l-.25 1h13.72l-.25-1Z" />
                     </svg></sgds-tab>
-                <sgds-tab active slot="nav">2</sgds-tab>
-                <sgds-tab slot="nav">3</sgds-tab>
-                <sgds-tab-panel name="one">hello</sgds-tab-panel>
+                <sgds-tab active slot="nav" panel="2">2</sgds-tab>
+                <sgds-tab slot="nav" panel="3">3</sgds-tab>
+                <sgds-tab-panel name="12">12</sgds-tab-panel>
+                <sgds-tab-panel name="2">2</sgds-tab-panel>
+                <sgds-tab-panel name="3">3</sgds-tab-panel>
             </sgds-tab-group>
             <sgds-tab-group tabsClasses="mb-3 border border-primary">
                 <sgds-tab disabled slot="nav" panel="one">hello</sgds-tab>
-                <sgds-tab slot="nav" panel="two">2</sgds-tab>
-                <sgds-tab slot="nav" panel="three">3</sgds-tab>
+                <sgds-tab slot="nav" panel="two">two</sgds-tab>
+                <sgds-tab slot="nav" panel="three">three</sgds-tab>
                 <sgds-tab-panel name="one" active>one</sgds-tab-panel>
                 <sgds-tab-panel name="two">two</sgds-tab-panel>
                 <sgds-tab-panel name="three">three</sgds-tab-panel>
