chore(storybook): fix broken build

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     <main>
         <div class="container">
             
-            <textarea></textarea>
+            <sgds-close-button></sgds-close-button>
             <sgds-textarea required label="Label" name="textarea" textareaclasses="" rows="4" invalidfeedback="test"
                 placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
             </sgds-textarea>
@@ -636,6 +636,7 @@
             <div class="container">
                 <h2>Button</h2>
                 <div>
+                    <sgds-button >Default Button</sgds-button>
                     <sgds-button variant="primary">Hello World</sgds-button>
                     <sgds-button variant="secondary">Hello World</sgds-button>
                     <sgds-button variant="warning">Hello World</sgds-button>
