feat(quantity-toggle): new cssprop introduced, refactor the internals to reuse components,
changed value for size prop

BREAKING CHANGE: size prop

--- a/index.html
+++ b/index.html
@@ -731,9 +731,9 @@
             <div>
                 <h2>Checkbox</h2>
                 <form id="radio-submit">
-                <sgds-checkbox id="hehe" invalid hasFeedback invalidFeedback="test">1</sgds-checkbox>
-                <sgds-checkbox hasFeedback>2</sgds-checkbox>
-                <sgds-checkbox >3</sgds-checkbox>
+                <sgds-checkbox id="hehe" isInline invalid hasFeedback invalidFeedback="test">1</sgds-checkbox>
+                <sgds-checkbox hasFeedback isInline>2</sgds-checkbox>
+                <sgds-checkbox isInline>3</sgds-checkbox>
                 <sgds-switch  invalid checked hasFeedback>test</sgds-switch>
                 <sgds-button  type="submit" >Submit</sgds-button>
             </form>
