--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 [&quot;1&quot;, &quot;John&quot;, &quot;Doe&quot;, &quot;@johndoe&quot;],
 [&quot;2&quot;, &quot;Jane&quot;, &quot;Doe&quot;, &quot;@janedoe&quot;],
 [&quot;3&quot;, &quot;Bob&quot;, &quot;Smith&quot;, &quot;@bobsmith&quot;]
-]" striped="" bordered="" borderless="" size="" variant="dark" responsive="" sort="" removablesort="">
+]" striped="" bordered="" borderless="" hover size="" variant="dark" responsive="" sort="" removablesort="">
             </sgds-table>
             <sgds-table
                 tableheaders="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
